--- a/src/Styles/productlist.css
+++ b/src/Styles/productlist.css
@@ -30,7 +30,18 @@
   justify-content: center;
   align-items: center;
 }
-
+.tabContainer {
+  display: flex;
+  overflow: scroll;
+  margin: 10px;
+}
+.tabContainer::-webkit-scrollbar {
+  display: none;
+}
+.tabContainer {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
 @media (min-width: 996px) {
   .productlistContainer {
     width: 99vw;
