--- a/src/Styles/navbar.css
+++ b/src/Styles/navbar.css
@@ -4,12 +4,14 @@
 }
 
 .navbarContainer {
-  background-color: aquamarine;
+  background-color: white;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;
   height: 8vh;
   justify-content: space-between;
   display: flex;
   align-items: center;
   width: 100vw;
+  position: fixed;
 }
 
 .innernavContainer {
