--- a/src/Styles/productDetails.css
+++ b/src/Styles/productDetails.css
@@ -1,47 +1,55 @@
-* {
-  margin: 0px;
-  padding: 0px;
-}
 .productdetailContainer {
   padding: 10px;
   padding-top: 8vh;
-
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
 }
 .slider-container {
   margin-top: 20px;
 }
 .imgcoursol {
-  height: 60vh;
-  border-radius: 10px;
+  height: 40vh;
+}
+.buttonCartAdd {
   width: 100%;
-  overflow-wrap: normal;
+  background-color: blueviolet;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  color: white;
+  text-align: center;
 }
-.container {
-  padding: 0px;
-}
-.slider-container {
-  width: 100%;
-  height: 60vh;
-  color: blue;
-}
-
-.producttitle {
-  width: 100vw;
-}
-.detailsContainer {
-  align-self: flex-start;
-  margin-top: 10px;
-}
-.producttitle {
-  font-family: Roboto;
-  font-size: 20px;
-}
-
 .titleAndshareContainer {
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.producttitle {
+  font-size: 20px;
+  font-family: Roboto;
+}
+.discountpercentage {
+  color: green;
+  border: solid 1px green;
+  padding: 5px;
+}
+.originalprice {
+  font-family: Roboto;
+  font-size: 14px;
+  color: black;
+  margin-right: 3px;
+}
+.mrpPrice {
+  font-family: Roboto;
+  font-size: 12px;
+  margin-top: 3px;
+  color: #716666;
+  text-decoration: line-through;
+  margin-right: 4px;
+}
+.priceContainer {
+  margin-left: 5px;
+  margin-top: 2px;
+  margin-bottom: 8px;
   align-items: center;
 }
