--- a/src/Styles/productDetails.css
+++ b/src/Styles/productDetails.css
@@ -28,7 +28,7 @@
   font-size: 20px;
   font-family: Roboto;
 }
-.discountpercentage {
+.dispercentage {
   color: green;
   border: solid 1px green;
   padding: 5px;
